--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
+  /* align-items: center; */
+  padding: 1rem;
   min-height: 100vh;
+}
+
+.header {
+
 }
 
 .description {
